--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -50,6 +50,7 @@ body {
 {
     font-family: 'Nunito';
     font-weight: 300;
+    margin-left: 1rem !important;
 }
 #Component-2 h3
 {
@@ -94,7 +95,7 @@ body {
     }
     #Component-2 h6
     {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         margin-right: 1rem;
         font-family: 'Nunito';
         font-weight: 300;
@@ -124,8 +125,8 @@ body {
     }
     #Component-2 h6
     {
-        font-size: 0.8rem;
-        margin-right: 1rem;
+        font-size: 0.9rem;
+        margin-right: 1rem !important;
         font-family: 'Nunito';
         font-weight: 300;
     }
@@ -194,4 +195,22 @@ body {
         justify-content: center;
         margin-left: 0%;
     }             
+}
+.mobile-menu
+{
+    display:flex;
+    justify-content:space-between;
+    align-items: center;
+    color: white
+}
+.mobile-dropdown
+{
+    background-color: white;
+}
+.menu-icon
+{
+    font-size: 2rem;
+    cursor: pointer;
+    color: white;
+    margin-top: -0.5rem;
 }
