--- a/src/Components/NewHomepage/Homepage.css
+++ b/src/Components/NewHomepage/Homepage.css
@@ -1100,7 +1100,7 @@ body{
 }
 
 .Cart-Button1 {
-    width: 20%;
+    width: 30%;
     padding: 0.3rem;
     background-color: red;
     color: white;
@@ -1108,7 +1108,7 @@ body{
     border: none;
     transition-duration: 1s;
     border: 1px solid black;
-
+    margin-right: 1rem;
 }
 .Cart-Button1:hover {
 
@@ -4670,8 +4670,15 @@ body{
     align-items: center;
     padding: 1rem; 
 }
+.Banner button
+{
+    display: none;
+    
+}
+    
 .Banner div
 {
+    font-size: 1rem;
     margin-right: 0.5rem;
 }
 
@@ -4683,18 +4690,38 @@ body{
     }
     .Banner
     {
-        font-size: 0.65rem;
-        padding: 0.8rem; 
-
+        flex-direction: column !important;
     }
 }
+@media (max-width: 660px) {
+    .Banner div:nth-child(2)
+    {
+        font-size: 0.9rem;
+    }
+    .Banner button
+    {
+        display: block;
+        background-color: black;
+        color: white;
+        border: 1px solid black;
+        padding: 0.3rem;
+        padding-left: 0.6rem;
+        padding-right: 0.6rem;
+        transition-duration: 1s;
+    }
+    .Banner button:hover
+    {
+        background-color: transparent;
+        color: black;
+        border: 1px solid black;
+    }
 
+}
 @media (max-width: 430px) {
     .Banner
     {
-        font-size: 0.45rem;
+        font-size: 0.9rem;
         padding: 0.8rem; 
-
     }
 }
 @media (max-width: 400px) {
@@ -4706,20 +4733,28 @@ body{
         margin-top: -0.7rem !important;
         color: red;
     }
-    .Banner
+    .Banner div
     {
-        font-size: 0.4rem;
-        padding: 0.8rem; 
-
+        font-size: 0.9rem;
+        justify-content: left;
+        text-align: left !important;
+        align-items: left;
     }
+    .radio-inputs {
+        width: 90%
+    }
+
 }
 @media (max-width: 360px) {
     .Banner
     {
-        font-size: 0.35rem;
+        font-size: 0.9rem;
         padding: 0.8rem; 
-
     }
+    .radio-inputs {
+        width: 90%
+    }
+
 }
 @media (max-width: 760px) {
     .Option1_Footer {
@@ -4733,3 +4768,12 @@ body{
         margin-top: -0.5rem;
     }
 }
+.hide-slide {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+  
+  .splide__slide {
+    transition: transform 0.5s ease;
+  }
+  
