--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -15,6 +15,8 @@
     background-color: white;
     border-top-left-radius: 0%;
     border-bottom-left-radius: 0%;
+    border: 1px solid #6AD3FE;
+
 }
 
 .sidebar2 {
@@ -24,6 +26,7 @@
     border-radius: 1rem;
     color: black;
     background-color: white;
+
 }
 
 .sidebar2 img {
@@ -132,22 +135,21 @@
 }
 
 .login-button {
-    background-color: red;
-    border: 1px solid black;
+    background-color: #6AD3FE;
+    border: 1px solid white;
     font-family: 'Nunito';
-    color: white;
-    width: 50%;
+    color: black;
+    width: 40%;
     padding: 0.5rem;
-    border-radius: 3px;
+    border-radius: 8px;
     transition-duration: 1s;
 }
 
 .login-button:hover {
-    background-color: black;
-    border: 1px solid red;
+    background-color: transparent;
+    border: 1px solid #6AD3FE;
     font-family: 'Nunito';
-    color: red;
-    width: 50%;
+    color: black;
     padding: 0.5rem;
     border-radius: 3px;
 }
