--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,12 +1,12 @@
 #Contact-Body
 {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     font-family: 'Nunito';
     display: grid;
     grid-template-columns: 50% 50%;
     margin-top: 2rem;
-    border: 1px solid red;
+    border: 2px solid #6AD3FE;
     border-radius: 0.8rem;
 }
 .Map
@@ -28,7 +28,7 @@
 .Contact1
 {
     text-align: center;
-    color: red;
+    color: #6AD3FE;
 }
 .Contact-Holder
 {
