--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: white;
 }
 
 #Navbar {
@@ -7,10 +7,11 @@ body {
     display: grid;
     grid-template-columns: 60% 30% 10%;
     align-items: center;
-    color: white;
+    color: black;
     padding: 1.5rem;
-    background-color: black;
-    border-bottom: 1px solid red;
+    background-color: white;
+    border-bottom: 1px solid #6AD3FE;
+    font-weight: 800;
 }
 #NewNavbar
 {
@@ -21,7 +22,7 @@ body {
     color: white;
     padding: 1.5rem;
     background-color: black;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid #6AD3FE;
 }
 
 #Component-1
@@ -32,11 +33,11 @@ body {
 }
 #Component-1 h3 span
 {
-    color: red;
+    color: #6AD3FE;
 }
 .Component-Red
 {
-    color: red;
+    color: #6AD3FE;
 }
  
 #Component-2
@@ -138,18 +139,19 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: -0.5rem;
-    background-color: transparent;
-    color: white;
-    border: 1px solid red;
+    color: black;
+    border: 1px solid #6AD3FE;
+    background-color: #6AD3FE;
+
     padding: 0.5rem;
     font-family: 'Nunito';
     font-size: 0.9rem;
 }
 .Request:hover
 {
-    background-color: red;
-    color: white;
-    border: 1px solid red;
+    background-color: transparent;
+    color: black;
+    border: 1px solid #6AD3FE;
     transition: 0.5s;
 }
 #NavbarPT
@@ -158,9 +160,8 @@ body {
     display: grid;
     grid-template-columns: 70% 30%;
     align-items: center;
-    color: white;
-    background-color: black;
-    border-bottom: 1px solid red;
+    color: black;
+    border-bottom: 1px solid #6AD3FE;
     padding: 1.5rem;
 
 }
@@ -169,9 +170,8 @@ body {
 {
     width: 100%;
     align-items: center;
-    color: white;
+    color: black;
     margin-left: 2rem;
-    background-color: black;
 }
 #NavbarPT2
 {
@@ -201,7 +201,7 @@ body {
     display:flex;
     justify-content:space-between;
     align-items: center;
-    color: white
+    color: black
 }
 .mobile-dropdown
 {
@@ -211,6 +211,25 @@ body {
 {
     font-size: 2rem;
     cursor: pointer;
-    color: white;
+    color: black;
     margin-top: -0.5rem;
+}
+#Component-1 img {
+    width: 30%;
+    height: 30%;
+    object-fit: cover;
+    margin-right: 1rem;
+    margin-top: -1.5rem;
+    margin-bottom: -1.5rem;
+}
+
+@media (max-width: 768px) 
+{
+    #Component-1 img {
+        width: 50%;
+        height: 50%;    
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
 }
