--- a/src/Components/NewHomepage/Homepage.css
+++ b/src/Components/NewHomepage/Homepage.css
@@ -16,7 +16,7 @@ body{
     line-height: 1.3;
     flex-direction: column;
     align-items: center;
-    color: white;
+    color: black;
     font-size: 1.5rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -31,8 +31,8 @@ body{
     width: 30%;
     height: 4rem;
     font-family: "Nunito";
-    border: 2px solid red;
-    background-color: black;
+    border: 2px solid #6AD3FE;
+    background-color: transparent;
     color: white;
     font-size: 2rem;
     padding: 0.5rem;
@@ -42,7 +42,7 @@ body{
 }
 
 .PlateText::placeholder {
-    background-color: black;
+    background-color: white;
 }
 
 .Radio-Holder {
@@ -53,11 +53,11 @@ body{
 }
 
 .Plate-Builder {
-    background-color: black;
+    background-color: white;
     width: 100%;
     padding: 1rem;
     border-radius: 8px;
-    border: 3px solid red;
+    border: 3px solid #6AD3FE;
 
 }
 
@@ -73,10 +73,10 @@ body{
     border-radius: 5px;
     width: 100%;
     margin-right: 0.4rem;
-    border: 1px solid red;
-    color: white;
+    border: 1px solid #6AD3FE;
     border-radius: 5px;
-    background-color: black;
+    color: black;
+    background-color: whITE;
 }
 
 #Dropdown-Medium {
@@ -85,9 +85,9 @@ body{
     width: 100%;
     border-radius: 5px;
     margin-right: 0.4rem;
-    border: 1px solid red;
-    color: white;
-    background-color: black;
+    border: 1px solid #6AD3FE;
+    color: black;
+    background-color: white;
 }
 
 #Dropdown-Large {
@@ -96,15 +96,15 @@ body{
     padding: 0.5rem;
     border-radius: 5px;
     margin-right: 0.4rem;
-    border: 1px solid red;
-    color: white;
-    background-color: black;
+    border: 1px solid #6AD3FE;
+    color: black;
+    background-color: whITE;
 
 }
 
 #ColorPickerdiv {
     border-radius: 5px;
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
     color: white;
     background-color: black;
     display: flex;
@@ -120,7 +120,7 @@ body{
 }
 
 #Footer {
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
     color: white;
     background-color: black;
     padding: 0.5rem;
@@ -994,7 +994,7 @@ body{
 
 .GridItem2 {
     padding-bottom: 2rem !important;
-    border-color: 1px solid red;
+    border-color: 1px solid #6AD3FE;
 }
 
 .Divider {
@@ -1002,8 +1002,9 @@ body{
     padding: 2rem;
     padding-left: 0;
     padding-right: 0rem;
-    border-bottom: 3px solid red;
-    border-top: 3px solid red;
+    border-bottom: 3px solid #6AD3FE;
+    border-top: 3px solid #6AD3FE;
+    margin-bottom: -1rem;
 
 }
 
@@ -1015,7 +1016,7 @@ body{
 }
 
 .Divider-Text2 {
-    color: red;
+    color: black;
     font-family: 'Nunito';
     text-align: center;
     font-size: 1rem;
@@ -1039,7 +1040,7 @@ body{
     font-family: 'Nunito';
     font-size: 1rem;
     font-weight: 500;
-    color: red;
+    color: black;
     margin-bottom: 1rem;
 
 }
@@ -1064,11 +1065,10 @@ body{
 }
 
 #YAB {
-    border: 3px solid red;
+    border: 3px solid #6AD3FE;
     width: 90%;
     display: flex;
     border-radius: 8px;
-
     justify-content: center;
     flex-direction: column;
     padding: 1rem;
@@ -1084,8 +1084,8 @@ body{
 .Cart-Button {
     width: 100%;
     padding: 0.5rem;
-    background-color: red;
-    color: white;
+    background-color: #6AD3FE;
+    color: black;
     border-radius: 8px;
     border: 1px solid white;
     transition-duration: 1s;
@@ -1093,30 +1093,30 @@ body{
 .Cart-Button:hover {
     width: 100%;
     padding: 0.5rem;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     border-radius: 8px;
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
 }
 
 .Cart-Button1 {
     width: 30%;
     padding: 0.3rem;
-    background-color: red;
-    color: white;
+    background-color: #6AD3FE;
+    color: black;
     border-radius: 5px;
     border: none;
     transition-duration: 1s;
-    border: 1px solid black;
+    border: 1px solid #6AD3FE;
     margin-right: 1rem;
 }
 .Cart-Button1:hover {
 
     padding: 0.3rem;
-    background-color: black;
-    color: white;
+    background-color: transparent;
+    color: black;
     border-radius: 5px;
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
 }
 
 #PlateFront4D,
@@ -1825,7 +1825,7 @@ body{
 
 .Bought {
     font-size: 0.8rem;
-    color: white;
+    color: black;
     margin-bottom: 1rem;
 }
 
@@ -1970,7 +1970,7 @@ body{
     color: white;
     margin-top: -2rem;
     margin-left: 3rem;
-    background-color: red;
+    background-color: #6AD3FE;
     padding-top: 0.2rem;
     padding-bottom: 0.2rem;
 }
@@ -2030,11 +2030,11 @@ body{
     display: flex;
     flex-wrap: wrap;
     border-radius: 0.5rem;
-    background-color: black;
+    background-color: white;
     color: white;
     box-sizing: border-box;
     box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
     padding: 0.25rem;
     width: 300px;
     font-size: 14px;
@@ -2057,13 +2057,13 @@ body{
     border-radius: 0.5rem;
     border: none;
     padding: .5rem 0;
-    color: white;
+    color: black;
     transition: all .15s ease-in-out;
 }
 
 .radio-inputs .radio input:checked+.name {
-    background-color: red;
-    color: white;
+    background-color: #6AD3FE;
+    color: black;
     font-weight: 600;
 }
 
@@ -2085,7 +2085,7 @@ body{
 }
 
 #ResetButton {
-    background-color: red;
+    background-color: #6AD3FE;
     width: max-content;
     padding: 0.5rem;
     width: 100%;
@@ -4663,9 +4663,9 @@ body{
 {
     display: flex;
     justify-content: center;
-    background-color: red;
+    background-color: #6AD3FE;
     margin-top: -1rem;
-    color: white;
+    color: black;
     font-family: 'Nunito';
     align-items: center;
     padding: 1rem; 
@@ -4676,12 +4676,38 @@ body{
     
 }
     
-.Banner div
+.Banner div:nth-child(1)
 {
+    background-color: transparent;
+    padding: 0.5rem;
+    display: flex;
     font-size: 1rem;
     margin-right: 0.5rem;
+    border: 1px solid #FFCC00;
+    background-color: #FFCC00;
+    cursor: pointer;
+    border-radius: 8px;
+    transition-duration: 1s;
+}
+.Banner div:nth-child(1):hover
+{
+    background-color: transparent;
+    padding: 0.5rem;
+    display: flex;
+    font-size: 1rem;
+    margin-right: 0.5rem;
+    border: 1px solid #FFCC00;
+    background-color: #ffe062;
+    cursor: pointer;
+    border-radius: 8px;
 }
 
+.Banner div p 
+{
+    margin: 0;
+    margin-right: 0.5rem;
+}
+ 
 @media (max-width: 760px) {
     .Option2_Footer {
         font-size: 7px;
@@ -4716,6 +4742,17 @@ body{
         border: 1px solid black;
     }
 
+    .Banner div:nth-child(1)
+    {
+        font-size: 0.8rem;
+        margin-bottom: 1rem;
+    }
+    .key
+    {
+        font-size: 0.8rem;
+        margin-top: -0.3rem;
+    }
+
 }
 @media (max-width: 430px) {
     .Banner
@@ -4731,7 +4768,7 @@ body{
     .Option2_Footer {
         font-size: 7px;
         margin-top: -0.7rem !important;
-        color: red;
+        color: #6AD3FE;
     }
     .Banner div
     {
