--- a/src/Components/Orders/Orders.css
+++ b/src/Components/Orders/Orders.css
@@ -13,7 +13,10 @@
 {
     display: grid;
     grid-template-columns: 50% 50%;
-    border: 1px solid black;
+    border: 1px solid #6AD3FE;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 8px;
 }
 .Order-HisA
 {
@@ -36,21 +39,22 @@
 #Plate-Box
 {
     text-align: center;
-    border: 2px solid red;
-    background-color: black;
-    color: white;
+    border: 2px solid #6AD3FE;
+    background-color:#6AD3FE;
+    color: black;
     width: 100%;
     font-size: 1rem;
     font-family: 'Nunito';
+    font-weight: bold;
 }
 #Plate-Box1
 {
-    background-color: black;
+    background-color:#6AD3FE;
     display: flex;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid white;
     padding: 0.5rem;
     justify-content:space-between;
-    color: white;
+    color: black;
     width: 100%;
     font-size: 1rem;
     font-family: 'Nunito';
@@ -58,7 +62,7 @@
 #Plate-Box2
 {
     display: flex;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid #6AD3FE;
     padding: 0.5rem;
     justify-content:space-between;
     color: black;
@@ -76,18 +80,19 @@
     width: 100%;
     font-size: 1rem;
     font-family: 'Nunito';
-    background-color: black;
-    color: white;
-    border: 1px solid red;
+    background-color: #6AD3FE;
+    color: black;
+    border: 1px solid #6AD3FE;
     padding: 0.5rem;
     border-radius: 0.3rem;
     transition-duration: 1s;
+    margin-bottom: 1rem;
 }
 .back-btn:hover
 {
-    background-color: red;
-    color: white;
-    border: 1px solid black;
+    background-color: transparent;
+    color: black;
+    border: 1px solid #6AD3FE;
     padding: 0.5rem;
     border-radius: 0.3rem;
 }
@@ -106,9 +111,9 @@
     width: 100%;
     font-size: 1rem;
     font-family: 'Nunito';
-    background-color: black;
+    background-color: #6AD3FE;
     color: white;
-    border: 1px solid red;
+    border: 1px solid black;
     padding: 0.5rem;
     border-radius: 0.3rem;
     transition-duration: 1s;
