--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,5 +1,5 @@
 .Services-Head {
-    color: white;
+    color: black;
     text-align: center;
     margin-top: 1.5rem;
     font-family: 'Nunito';
@@ -7,7 +7,7 @@
 }
 
 .Services-Container {
-    display: grid;
+    display: grid; 
     grid-template-columns: 50% 50%;
 }
 
@@ -21,23 +21,23 @@
 }
 
 .S-Container-2 h5 {
-    color: white;
+    color: black;
     font-family: 'Nunito';
 }
 
 .S-Container-2 h5 span {
-    color: red
+    color: #6AD3FE
 }
 
 .S-Container-2 p {
-    color: white;
+    color: black;
     font-family: 'Nunito';
     font-size: 0.9rem;
     text-align: justify;
 }
 
 .S-Container-2 ul {
-    color: white;
+    color: black;
     font-family: 'Nunito';
     font-size: 0.9rem;
     text-align: justify;
@@ -54,10 +54,10 @@
 .Touch {
     display: flex;
     justify-content: center;
-    background-color: red;
-    color: white;
+    background-color: #6AD3FE;
+    color: black;
     font-family: 'Nunito';
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
     padding: 0.5rem;
     padding-left: 1rem;
     padding-right: 1rem;
@@ -66,14 +66,14 @@
 
 .Touch:hover {
     background-color: transparent;
-    color: white;
-    border: 1px solid red;
+    color: black;
+    border: 1px solid #6AD3FE;
 }
 
 .Service-Divider {
     width: 200%;
-    color: red;
-    border: 1px solid red;
+    color: #6AD3FE;
+    border: 1px solid #6AD3FE;
 }
 
 @keyframes fadeInLeft {
@@ -115,14 +115,14 @@
 
 .Van-Lock {
     padding-left: 2rem;
-    color: white;
+    color: black;
     font-family: 'Nunito';
 }
 
 .Van-Lock1 {
     padding: 2rem;
     padding-top: 0rem;
-    color: white;
+    color: black;
     font-family: 'Nunito';
     display: grid;
     grid-template-columns: 33.33% 33.33% 33.33%;
@@ -132,7 +132,7 @@
     text-align: center;
     padding: 2rem;
     padding-top: 0rem;
-    color: white;
+    color: black;
     font-family: 'Nunito';
 }
 
@@ -146,7 +146,7 @@
 .VanLock-Inner h6 {
     margin-top: -1rem;
     padding: 0.5rem;
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
     border-top: 0rem;
 }
 
@@ -160,16 +160,16 @@
     flex-direction: column;
     align-items: center !important;
     justify-content: space-between;
-    color: white;
+    color: black;
     padding: 1rem;
     text-align: center;
     font-family: 'Nunito';
-    border: 2px solid red;
+    border: 2px solid #6AD3FE;
     margin: 1.5rem;
 }
 
 .FCont2 {
-    color: white;
+    color: black;
     padding: 1rem;
 }
 
@@ -182,64 +182,64 @@
 }
 
 .FCont1 h4 span {
-    color: red;
+    color: #6AD3FE;
 }
 
 .Request-Input {
     width: 100%;
     padding: 0.5rem;
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
     margin-top: 0.5rem;
     background-color: transparent;
-    color: white;
+    color: black;
     font-family: 'Nunito';
 }
 
 .Request-Input::placeholder {
-    color: white;
+    color: black;
     font-family: 'Nunito';
 }
 
 #Dropdown-Request {
     width: 100%;
     padding: 0.5rem;
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
     margin-top: 0.5rem;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     font-family: 'Nunito';
 }
 
 #Request-area {
     width: 100%;
     padding: 0.5rem;
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
     margin-top: 0.5rem;
     background-color: transparent;
-    color: white;
+    color: black;
     font-family: 'Nunito';
 }
 
 #Request-area::placeholder {
-    color: white;
+    color: black;
     font-family: 'Nunito';
 }
 
 .Request-Button {
     width: 100%;
     padding: 0.5rem;
-    border: 1px solid red;
+    border: 1px solid #6AD3FE;
     margin-top: 0.5rem;
-    background-color: red;
-    color: white;
+    background-color: #6AD3FE;
+    color: black;
     font-family: 'Nunito';
     transition-duration: 1s;
 }
 
 .Request-Button:hover {
     background-color: transparent;
-    color: white;
-    border: 1px solid red;
+    color: black;
+    border: 1px solid #6AD3FE;
 }
 
 
