--- a/src/Components/NewHomepage/Homepage.css
+++ b/src/Components/NewHomepage/Homepage.css
@@ -33,7 +33,7 @@ body{
     font-family: "Nunito";
     border: 2px solid #6AD3FE;
     background-color: transparent;
-    color: white;
+    color: black;
     font-size: 2rem;
     padding: 0.5rem;
     border-radius: 5px;
