--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -28,11 +28,11 @@
 }
 
 #Footer-Component-1 h3 span {
-    color: #6AD3FE;
+    color: #F6C506;
 }
 
 .FooterContainer {
-    background-color: #6AD3FE;
+    background-color: #F6C506;
     color: black;
     font-family: 'Nunito';
     padding: 15px;
