--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -10,7 +10,7 @@ body {
     color: black;
     padding: 1.5rem;
     background-color: white;
-    border-bottom: 1px solid #6AD3FE;
+    border-bottom: 1px solid #F6C506;
     font-weight: 800;
 }
 #NewNavbar
@@ -22,7 +22,7 @@ body {
     color: white;
     padding: 1.5rem;
     background-color: black;
-    border-bottom: 1px solid #6AD3FE;
+    border-bottom: 1px solid #F6C506;
 }
 
 #Component-1
@@ -33,11 +33,11 @@ body {
 }
 #Component-1 h3 span
 {
-    color: #6AD3FE;
+    color: #F6C506;
 }
 .Component-Red
 {
-    color: #6AD3FE;
+    color: #F6C506;
 }
  
 #Component-2
@@ -140,8 +140,8 @@ body {
     align-items: center;
     margin-top: -0.5rem;
     color: black;
-    border: 1px solid #6AD3FE;
-    background-color: #6AD3FE;
+    border: 1px solid #F6C506;
+    background-color: #F6C506;
 
     padding: 0.5rem;
     font-family: 'Nunito';
@@ -151,7 +151,7 @@ body {
 {
     background-color: transparent;
     color: black;
-    border: 1px solid #6AD3FE;
+    border: 1px solid #F6C506;
     transition: 0.5s;
 }
 #NavbarPT
@@ -161,7 +161,7 @@ body {
     grid-template-columns: 70% 30%;
     align-items: center;
     color: black;
-    border-bottom: 1px solid #6AD3FE;
+    border-bottom: 1px solid #F6C506;
     padding: 1.5rem;
 
 }
