--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,6 +1,7 @@
 #Div-Holder {
-    display: grid;
-    grid-template-columns: 50% 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 10rem !important;
 }
 .sidebar1 {
@@ -12,10 +13,15 @@
     border-radius: 1rem;
     color: black;
     height: 120%;
+    width: 50%;
     background-color: white;
-    border-top-left-radius: 0%;
-    border-bottom-left-radius: 0%;
-    border: 1px solid #6AD3FE;
+    border: 1px solid #F6C506;
+    box-shadow: 0px -1px 13px 0px rgba(111, 111, 111, 0.352);
+    -webkit-box-shadow: 0px -1px 13px 0px rgba(111, 111, 111, 0.266);
+    ;
+    -moz-box-shadow: 0px -1px 13px 0px rgba(111, 111, 111, 0.401);
+    ;
+
 
 }
 
@@ -135,7 +141,7 @@
 }
 
 .login-button {
-    background-color: #6AD3FE;
+    background-color: #F6C506;
     border: 1px solid white;
     font-family: 'Nunito';
     color: black;
@@ -147,7 +153,7 @@
 
 .login-button:hover {
     background-color: transparent;
-    border: 1px solid #6AD3FE;
+    border: 1px solid #F6C506;
     font-family: 'Nunito';
     color: black;
     padding: 0.5rem;
@@ -162,6 +168,7 @@
         border-radius: 1rem;
     }
     .sidebar1 {
+        width: 100%;
         border-radius: 1rem;
     }    
     
