--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -13,8 +13,8 @@ body {
     border-bottom: 1px solid #F6C506;
     font-weight: 800;
 }
-#NewNavbar
-{
+
+#NewNavbar {
     width: 100%;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -25,77 +25,73 @@ body {
     border-bottom: 1px solid #F6C506;
 }
 
-#Component-1
-{
+#Component-1 {
     display: flex;
     align-items: center;
     margin-left: 10%;
 }
-#Component-1 h3 span
-{
+
+#Component-1 h3 span {
     color: #F6C506;
 }
-.Component-Red
-{
+
+.Component-Red {
     color: #F6C506;
 }
- 
-#Component-2
-{
+
+#Component-2 {
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-right: 1rem;
 }
-#Component-2 h6
-{
+
+#Component-2 h6 {
     font-family: 'Nunito';
     font-weight: 300;
     margin-left: 1rem !important;
 }
-#Component-2 h3
-{
+
+#Component-2 h3 {
     margin-top: -1rem;
 }
 
-  #Cover-Holder {
+#Cover-Holder {
     position: relative;
     width: 100%;
     max-width: 1600px;
     margin: 0 auto;
     margin-bottom: 1rem;
-  }
+}
 
-  #Cover-Holder img {
+#Cover-Holder img {
     display: block;
     width: 100%;
-    object-fit:cover;
-  }
+    object-fit: cover;
+}
 
 
 
-@media (max-width: 768px) 
-{
-    #Navbar
-    {
+@media (max-width: 768px) {
+    #Navbar {
         grid-template-columns: 100%;
     }
-    #Component-1
-    {
+
+    #Component-1 {
         display: flex;
         justify-content: center;
         margin-left: 0%;
-        
+
     }
-    #Component-2
-    {
+
+    #Component-2 {
         display: flex;
         margin-right: 0%;
         justify-content: center;
         margin-bottom: 1rem;
     }
-    #Component-2 h6
-    {
+
+    #Component-2 h6 {
         font-size: 0.9rem;
         margin-right: 1rem;
         font-family: 'Nunito';
@@ -103,38 +99,89 @@ body {
     }
 
 }
-  
-@media (max-width: 480px) 
-{
-    #Navbar
-    {
+
+@media (max-width: 480px) {
+    #Navbar {
         grid-template-columns: 100%;
     }
-    #Component-1
-    {
+
+    #Component-1 {
         display: flex;
         justify-content: center;
         margin-left: 0%;
-        
+
     }
-    #Component-2
-    {
+
+    #Component-2 {
         display: flex;
         margin-right: 0%;
         justify-content: center;
         margin-bottom: 1rem;
     }
-    #Component-2 h6
-    {
+
+    #Component-2 h6 {
         font-size: 0.9rem;
         margin-right: 1rem !important;
         font-family: 'Nunito';
         font-weight: 300;
     }
-             
+
 }
-.Request
-{
+
+.drawer {
+    background: rgba(255, 255, 255, 0.2) !important;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.1px);
+    -webkit-backdrop-filter: blur(7.1px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    display: flex !important;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.Drawer-Top{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #F6C506 !important;
+}
+.Drawer-Inner{
+    width: 100%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 6rem;
+}
+.Drawer-Inner div{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: black;
+    margin-bottom: 1rem;
+    font-size: 1.1rem;
+    font-family: 'Nunito';
+    font-weight: 300;
+}
+.Drawer-Inner div:hover{
+    color: #F6C506;
+    transition: 0.5s;
+}
+
+.close-icon {
+    font-size: 1.3rem;
+    margin-top: -0.5rem;
+    cursor: pointer;
+    cursor: pointer;
+    color: black !important;
+}
+
+.Request {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -147,15 +194,15 @@ body {
     font-family: 'Nunito';
     font-size: 0.9rem;
 }
-.Request:hover
-{
+
+.Request:hover {
     background-color: transparent;
     color: black;
     border: 1px solid #F6C506;
     transition: 0.5s;
 }
-#NavbarPT
-{
+
+#NavbarPT {
     width: 100%;
     display: grid;
     grid-template-columns: 70% 30%;
@@ -166,15 +213,14 @@ body {
 
 }
 
-#NavbarPT1
-{
+#NavbarPT1 {
     width: 100%;
     align-items: center;
     color: black;
     margin-left: 2rem;
 }
-#NavbarPT2
-{
+
+#NavbarPT2 {
     width: 100%;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -183,46 +229,54 @@ body {
     background-color: black;
 }
 
-@media (max-width: 768px) 
-{
-    #NavbarPT
-    {
+@media (max-width: 768px) {
+    #NavbarPT {
         grid-template-columns: 100%;
     }
-    #NavbarPT1
-    {
+
+    #NavbarPT1 {
         display: flex;
         justify-content: center;
         margin-left: 0%;
-    }             
+    }
 }
-.mobile-menu
-{
+
+.mobile-menu {
     margin-top: 1rem;
     width: 100%;
-    display:grid;
-    grid-template-columns: 20% 80%;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    color: black;
     margin-bottom: -2rem;
 }
-.mobile-dropdown
-{
+
+.mobile-menu img {
+    width: 55%;
+    height: 50%;
+    object-fit: cover;
+    margin-right: 1rem;
+    margin-top: -4rem;
+    margin-bottom: -1.5rem;
+}
+
+.mobile-dropdown {
     background-color: white;
 }
-.menu-icon
-{
-    font-size: 3rem !important;
+
+.menu-icon {
+    font-size: 2rem;
+    margin-top: -2rem;
+    cursor: pointer;
     cursor: pointer;
     color: black;
-    margin-top: -0.5rem;
 }
-.RequestB
-{
+
+.RequestB {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -0.5rem;
+    margin-top: 6rem;
     color: black;
     border: 1px solid #F6C506;
     background-color: #F6C506;
@@ -230,6 +284,7 @@ body {
     font-family: 'Nunito';
     font-size: 0.9rem;
 }
+
 #Component-1 img {
     width: 30%;
     height: 30%;
@@ -239,11 +294,10 @@ body {
     margin-bottom: -1.5rem;
 }
 
-@media (max-width: 768px) 
-{
+@media (max-width: 768px) {
     #Component-1 img {
         width: 50%;
-        height: 50%;    
+        height: 50%;
         margin-top: 0.5rem;
         margin-bottom: 0.5rem;
     }
