--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -247,7 +247,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: -2rem;
+    padding-top: 1.5rem;
+    margin-bottom: -1rem;
 }
 
 .mobile-menu img {
