--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -248,6 +248,8 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-bottom: -2rem;
+    padding-top: 1.5rem;
+    margin-bottom: -1rem;
 }
 
 .mobile-menu img {
