--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -41,9 +41,10 @@ body {
 
 #Component-2 {
     display: flex;
-    justify-content: space-around;
+    justify-content: end;
     align-items: center;
     margin-right: 1rem;
+    gap: 1rem;
 }
 
 #Component-2 h6 {
@@ -129,10 +130,7 @@ body {
 }
 
 .drawer {
-    background: rgba(255, 255, 255, 0.2) !important;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(7.1px);
-    -webkit-backdrop-filter: blur(7.1px);
+    background-color: aquamarine;
     border: 1px solid rgba(255, 255, 255, 0.3);
     display: flex !important;
     flex-direction: column;
