--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -168,6 +168,20 @@
     border: 1px solid #F6C506;
     color: black;
 }
+.Paynow3
+{
+    width: 40%;
+    border-radius: 0.2rem;
+    background-color: #F6C506;
+    color: black;
+    padding: 0.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    font-family: 'Nunito';
+    font-size: 1rem;
+    border: 1px solid #F6C506;
+    transition-duration: 1s;
+}
 #Component-2 h6
 {
     cursor: pointer;  
