--- a/src/Components/Orders/Orders.css
+++ b/src/Components/Orders/Orders.css
@@ -128,6 +128,23 @@
     align-items: center;
     margin-top: 3rem;
 }
+.Acc-Header
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    font-family: 'Nunito';
+}
+.Acc2
+{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    width: 100%;
+    gap: 0.5rem;
+    font-family: 'Nunito';
+}
 .Accessories
 {
     display: flex;
